--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Cache de segundo nível e cache de consultas
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
