--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,7 +5,12 @@ spring.datasource.username=root
 spring.datasource.password=MasterPass-22
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 # Cache de segundo nível e cache de consultas
 spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.cache.use_query_cache=false
+
+spring.output.ansi.enabled=always
+
+
